--- a/style/visual.less
+++ b/style/visual.less
@@ -38,10 +38,51 @@
     border-left: @height solid @color;
 }
 
-.fortune-wheel__pie {
-    width: 50%;
+.fortune-wheel {
+    text-align: center;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 
-.fortune-wheel__pie::before {
-    .triangle(down, 3em, 5px, blue);
+.fortune-wheel figcaption {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+.fortune-wheel__legend {
+    display: flex;
+    justify-content: space-around;
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+.fortune-wheel__legend-label {
+    vertical-align: top;
+}
+
+.fortune-wheel__legend-indicator {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    border: 1px solid lightgray;
+    margin-right: 5px;
+}
+
+.fortune-wheel__pie {
+    width: 50%;
+    transform: rotate(-90deg);
+    border-radius: 50%;
+    transition-duration: 0.5s;
+    transition-property: transform;
+    &::before {
+        position: relative;
+        left: 50%;
+        top: -10px;
+        .triangle(down, 2em, 5px, blue);
+    }
+}
+
+.fortune-wheel__button {
+    margin-top: 10px;
 }
